add geo distance sorting

--- a/es_config/mappings.json
+++ b/es_config/mappings.json
@@ -4,6 +4,9 @@
 		"NameRu" : { "type" : "string" },
 		"NameKk" : { "type" : "string" },
 		"NameEn" : { "type" : "string" },
+
+		"Location": { "type" : "geo_point" },
+
 		"SuggestData" : {
 			"type" : "completion",
 			"analyzer" : "simple",
